--- a/price_prediction.ipynb
+++ b/price_prediction.ipynb
@@ -1,10 +1,14 @@
 {
  "cells": [
   {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "",
-   "id": "d5ef346323dbbbe3"
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "initial_id",
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": ""
   }
  ],
  "metadata": {
