--- a/sigmoid.ipynb
+++ b/sigmoid.ipynb
@@ -3,8 +3,81 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "",
+   "source": "Sigmoid function",
    "id": "d5ef346323dbbbe3"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-10T11:34:20.137052Z",
+     "start_time": "2025-02-10T11:34:19.180686Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "import matplotlib.pyplot as plt",
+   "id": "9565c8a404d5efd8",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-10T11:34:40.212169Z",
+     "start_time": "2025-02-10T11:34:40.205732Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "import numpy as np\n",
+   "id": "2030979c1de38ff6",
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-10T11:41:39.393307Z",
+     "start_time": "2025-02-10T11:41:39.384661Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "input_array=np.array([1,2,3])\n",
+    "exp_array=np.exp(input_array)\n",
+    "\n",
+    "print(\"Input to exp:\",input_array)\n",
+    "print(\"Output of exp:\",exp_array)\n",
+    "\n",
+    "input_val=1\n",
+    "exp_val=np.exp(input_val)\n",
+    "\n",
+    "print(\"Input to exp:\",input_val)\n",
+    "print(\"Output of exp:\",exp_val)"
+   ],
+   "id": "5645eb400e04f0da",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input to exp: [1 2 3]\n",
+      "Output of exp: [ 2.71828183  7.3890561  20.08553692]\n",
+      "Input to exp: 1\n",
+      "Output of exp: 2.718281828459045\n"
+     ]
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "def sigmoid(z):\n",
+    "    "
+   ],
+   "id": "96a2050756423400"
   }
  ],
  "metadata": {
